# skeleton

./: .gitignore  .pre-commit-hooks.yaml  .pylintrc  .travis.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/.changes/next-release/: enhancement-documentation-19879.json
.github/ISSUE_TEMPLATE/: blank-issue.md  bug-report.md  bug.md  bug_report.md  config.yml  custom-issue-template.md  feature-request.md  feature_request.md  issue.md  need-help.md  question.md
.github/workflows/: cleanup.yml  greetings.yml  python-package.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  skeleton.rst
docs/source/_static/: 404.html
scripts/: apidoc.py  change.py  changelog.sh  checkenc.py  checklic.py  clean.py  cleanup.py  depupdate.py  install.py  lint.py  no_enc.py  rpm_install.sh  rstlint.py  run_tests.py  runtests.py  test.py  winbuild.py
skeleton/: __init__.py  __main__.py  __version__.py  cli.py  config.py  const.py  error.py  errors.py  log.py  utils.py
tests/: .coveragerc  __init__.py  conftest.py  test_cli.py  test_config.py  test_error.py  test_log.py  test_utils.py  test_version.py  utils.py
