[aliases]
release = sdist bdist_wheel
docs = build_sphinx

[bdist_rpm]
doc_files = docs,LICENSE.txt,README.rst,CHANGELOG.rst
install-script = scripts/rpm_install.sh
release = 1
packager = Chad Loether <chad.loether@outlook.com>

[bdist_wheel]
universal = 1

[build_sphinx]
build-dir = docs/build
source-dir = docs/source

[check-manifest]
ignore = .travis.yml

[clean]
all = 1

[coverage:html]
directory = tests/coverage_html

[coverage:run]
branch = True
source = skeleton
omit = */tests/*

[coverage:report]
ignore_errors = True
omit =
  */tests/*
  .tox/*
exclude_lines =
  raise NotImplementedError.*
  pragma: NO COVER
  def __repr__

[metadata]
license-file = LICENSE.txt
description-file = README.rst

[pycodestyle]
max-doc-length = 75
max-line-length = 79
filename = *.py
exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
count = 1
format = pylint
ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504

# Error Codes Ignored:
#   E111 - indentation
#   E402 - module level import not at top of file
#   F401 - builtins.* imported but unused
#   F403 - from builtins import * used; unable to detect undefined names
#   F405 - unicode may be undefined, or defined from star
#   F405 - imports: builtins
#   W503 - line break before binary operator
#
# References:
#   https://pycodestyle.readthedocs.io/
