; References:
;  https://docs.python.org/3/distutils/configfile.html
;  https://setuptools.readthedocs.io/en/latest/setuptools.html
;  https://setuptools.readthedocs.io/en/latest/setuptools.html
;  https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[aliases]
release = sdist bdist_wheel
docs = build_sphinx

[bdist_rpm]
doc_files = docs,LICENSE.txt,README.rst
install-script = scripts/rpm_install.sh
release = 1
packager = Chad Loether <chad.loether@outlook.com>

[bdist_wheel]
universal = 1

[build_sphinx]
build-dir = docs/build
source-dir = docs/source

[check-manifest]
ignore = .travis.yml

[clean]
all = 1

[coverage:html]
directory = tests/coverage_html

[coverage:run]
branch = True
omit =
  */tests/*
  .eggs/*
  setup.py
  env/*
  build/*
  dist/*

[coverage:report]
ignore_errors = 1
omit =
  */tests/*
  .tox/*
exclude_lines =
  raise NotImplementedError.*
  pragma: NO COVER
  def __repr__

[metadata]
license-files = LICENSE.txt
description-file = README.rst

;suppress inspection for section "LongLine"
[pycodestyle]
# select =
# hang-closing =
# quiet =
# show-pep8 =
# show-source =
# statistics =
max-doc-length = 75
max-line-length = 79
filename = *.py
exclude = __pycache__,dist*,build*,*.egg-info,.idea*,.git,.tox*,*.pytest_cache*,setup.py
count = 1
format = pylint
verbose = 1
# references: https://pycodestyle.readthedocs.io/
ignore = E111,E114,E121,E129,E402,E501,E741,E722,F401,F403,F405,W503,W504
